[package]
name = "spotrust"
version = "0.0.5"
authors = ["Valdemar Erk <valdemar@erk.io>"]
license = "ISC"
documentation = "https://docs.rs/spotrust"
homepage = "https://github.com/Erk-/spotrust"
repository = "https://github.com/Erk-/spotrust.git"
readme = "./README.md"
keywords = ["spotify", "webapi", "api", "music"]
description = "A wrapper for the spotify web api."

[dependencies]
reqwest = "0.8.2"
base64 = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2"